src/keypair/snapshots/hopr_types__keypair__keystore__tests__deserialize_pbkdf2.snap
---
source: src/keypair/keystore.rs
expression: keystore
---
crypto:
  cipher: aes-128-ctr
  cipherparams:
    iv: 6087dab2f9fdbbfaddc31a909735c1e6
  ciphertext: 5318b4d5bcd28de64ee5559e671353e16f075ecae9f99c7a79a38af5f869aa46
  kdf: pbkdf2
  kdfparams:
    c: 262144
    dklen: 32
    prf: hmac-sha256
    salt: ae3cd4e7013836a3df6bd7241b12db061dbe2c6785853cce422d148a624ce0bd
  mac: 517ead924a9d0dc3124507e3393d175ce3ff7c1e96529c6c555ce9e51205e9b2
id: 3198bc9c-6672-5ab3-d995-4942343ae5b6
version: 3
