src/keypair/snapshots/hopr_types__keypair__keystore__tests__deserialize_scrypt.snap
---
source: src/keypair/keystore.rs
expression: keystore
---
crypto:
  cipher: aes-128-ctr
  cipherparams:
    iv: 83dbcc02d8ccb40e466191a123791e0e
  ciphertext: d172bf743a674da9cdad04534d56926ef8358534d458fffccd4e6ad2fbde479c
  kdf: scrypt
  kdfparams:
    dklen: 32
    n: 262144
    p: 8
    r: 1
    salt: ab0c7876052600dd703518d6fc3fe8984592145b591fc8fb5c6d43190334ba19
  mac: 2103ac29920d71da29f15d75b4a16dbe95cfd7ff8faea1056c33131d846e3097
id: 3198bc9c-6672-5ab3-d995-4942343ae5b6
version: 3
